<resources>
    <string name="app_name">Lapit Chat</string>
    <string name="this_is_our_start_activity">This is our Start Activity</string>
    <string name="welcome_to_the_chat_app">Welcome to the Chat App</string>
    <string name="this_is_our_main_page">This is our Main Page!</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="login_page">Login Page</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_page">Create Account Page</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="welcome_to_lapit_chat_app">Welcome To Lapit Chat App</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="already_have_acount">Already have Acount</string>
    <string name="registered_email">Registered Email</string>
    <string name="registered_password">Registered Password</string>
    <string name="already_have_an_account">Already Have an account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_status">Change Status</string>
    <string name="change_image">Change Image</string>
    <string name="hi_there_i_m_using_lapit_chat_app">Hi there I\'m using Lapit Chat App</string>
    <string name="display_name">Display Name</string>
    <string name="new_status">New Status</string>
    <string name="create_new_satus">Create New Satus</string>
    <string name="create_new_status">Create New Status</string>
    <string name="update_profile">Update Profile</string>
    <string name="new_profile_picture">New Profile Picture</string>
    <string name="your_status">Your Status</string>
</resources>
